# sazon

./: .gitignore  DISCOVERY.md  DISENO_UI.md  EMPAQUETADO.md  MARCA.md  MEJORAS.md  PLAN_MEJORAS.md  ROADMAP.md  config.yaml  generar_icono.py  installer.iss  menu-app.spec  pyproject.toml  qa_smoke.py
.github/workflows/: release.yml  tests.yml
scripts/: validate_alcampo_endpoints.py
src/menu_app/: actualizaciones.py  backups.py  configuracion.py  escritorio.py  lanzador.py  telemetria.py  version.py
src/menu_app/almacenamiento/: actualizar.py  alertas_precio.py  cli.py  db.py  enriquecer_cli.py  estimar_fibra_cli.py  estimar_frescos_cli.py  export_csv.py  modelos.py  reporte.py  repositorio.py  validacion_datos.py  verificar_cli.py
src/menu_app/carrito/: __init__.py  alcampo.py  cli.py
src/menu_app/ia/: claves.py  cliente_claude.py  cliente_gemini.py  config_clave_cli.py  desambiguador.py
src/menu_app/ingesta/: alcampo_client.py  cache.py  categories.py  cli.py  csv_export.py  exceptions.py  models.py  playwright_fallback.py  rate_limit.py
src/menu_app/matching/: cli.py  descatalogados.py  glosario.py  matcher.py  normalizar.py  reporte_cli.py  reporte_sin_match.py  repositorio.py
src/menu_app/normalizacion/: clasificacion.py  detalle.py  fibra_estimada.py  limpieza.py  nutricion_estimada.py
src/menu_app/off/: cruce_cli.py  matcher.py  modelos.py  off_client.py
src/menu_app/optimizacion/: batchcooking.py  batchcooking_cli.py  cli.py  compra.py  desayunos.py  despensa.py  economia_recetas.py  estacionalidad.py  exportar.py  grupos_alimentos.py  nutrientes.py  palatabilidad.py  planes.py  procesado.py  referencias_nutricionales.py  rol_plato.py  rol_plato_cli.py  servicio.py  solver.py  temporada_festiva.py
src/menu_app/recetas/: catalogo_ingredientes.py  cli.py  dedup.py  dedup_cli.py  descubrimiento.py  manual.py  manual_cli.py  modelos.py  parseo_ingredientes.py  repositorio.py  scraper.py  sustituciones.py  tags.py  utensilios.py  valoraciones.py
src/menu_app/web/: app.py  marca.py  plantillas.py  server.py  tareas.py
tests/: test_actualizaciones.py  test_alcampo_client.py  test_alertas_precio.py  test_almacenamiento.py  test_backups.py  test_batchcooking.py  test_carrito.py  test_catalogo_desactualizado.py  test_comensales_equivalentes.py  test_compra_sustitucion.py  test_configuracion.py  test_contract_live.py  test_descatalogados.py  test_despensa.py  test_desperdicio_perecederos.py  test_detalle.py  test_economia.py  test_exportar.py  test_fibra_estimada.py  test_get_connection_concurrencia.py  test_grupos.py  test_ia.py  test_indice_cache.py  test_lote7_interfaz.py  test_lote8_distribucion.py  test_manual.py  test_matching.py  test_migraciones.py  test_models_and_csv.py  test_normalizacion.py  test_nutricion_estimada.py  test_nutrientes.py  test_off.py  test_palatabilidad.py  test_parseo_ingredientes.py  test_planes.py  test_presupuesto_comensal.py  test_propiedades.py  test_recetas.py  test_referencias_nutricionales.py  (+16 more)
